@@ -3,14 +3,14 @@ MD5 57580efc7486284feeda8665c1c45d4e files/mb_readline_312.patch 1108
 RMD160 5901513567ef2198b4c9c1baeb1ecc295af3eee8 files/mb_readline_312.patch 1108
 SHA256 6d7566cbe59eee9881b41a21ea561fd610816df768bb8fda42ef4435c84f5f22 files/mb_readline_312.patch 1108
 DIST mrbayes-3.1.2.tar.gz 545968 RMD160 b90b9406f34806bcd18bc49dc998b7ed444e93c3 SHA1 db73f53361688e1451ec155ccbdd130c3f889817 SHA256 c60253de1980c9f0a0eb684fffe7ba428fda7c39a3edcb6acf384b5e1443f2f4
-EBUILD mrbayes-3.1.2.ebuild 1242 RMD160 7f6fa137b65d6fca94f06544a33ab4da8dd5d2dc SHA1 3b46b43ddf9378551ad878cd340fd1535b14d0a1 SHA256 58dd6579b7322027782b19bbc351bd2bca48a413558946786336b753f5a0485d
-MD5 3bad8552c1749255c1299edd9e04b926 mrbayes-3.1.2.ebuild 1242
-RMD160 7f6fa137b65d6fca94f06544a33ab4da8dd5d2dc mrbayes-3.1.2.ebuild 1242
-SHA256 58dd6579b7322027782b19bbc351bd2bca48a413558946786336b753f5a0485d mrbayes-3.1.2.ebuild 1242
-MISC ChangeLog 2310 RMD160 bff9043c5fd2d86811dcda2b59c9bc624f905a79 SHA1 4d1f4974b31d2033bbe57dbbd893a99254d77d82 SHA256 5ec28af07616be2d42b7188caa8022ecc06e5c904423b20b6ea0a2c9a7800aca
-MD5 69aba7cb730235f461e00d30062efbb5 ChangeLog 2310
-RMD160 bff9043c5fd2d86811dcda2b59c9bc624f905a79 ChangeLog 2310
-SHA256 5ec28af07616be2d42b7188caa8022ecc06e5c904423b20b6ea0a2c9a7800aca ChangeLog 2310
+EBUILD mrbayes-3.1.2.ebuild 1169 RMD160 e832b1720c494940e139e34e1e4178c75aacb3af SHA1 560481604217fdd484a69d4091a9b296c841324c SHA256 cf8110350111d15307216044f7bbf63552bbd204758c0d47cba0508fe5dbd85a
+MD5 2e8e42ac8a45dff953604b72edb59ce0 mrbayes-3.1.2.ebuild 1169
+RMD160 e832b1720c494940e139e34e1e4178c75aacb3af mrbayes-3.1.2.ebuild 1169
+SHA256 cf8110350111d15307216044f7bbf63552bbd204758c0d47cba0508fe5dbd85a mrbayes-3.1.2.ebuild 1169
+MISC ChangeLog 2448 RMD160 7b0fc3a4455b4df61c9801ec712cba5a0ea87fec SHA1 07d47f4f004e0cd3b66bf7d43ef4fa98d35d0651 SHA256 201f5a285cb608e0d8b36e3380c31b3c826f59714b4a9e5f45c7c4fe1d49ab05
+MD5 23d18fcb4cce25c65758d04a406486f5 ChangeLog 2448
+RMD160 7b0fc3a4455b4df61c9801ec712cba5a0ea87fec ChangeLog 2448
+SHA256 201f5a285cb608e0d8b36e3380c31b3c826f59714b4a9e5f45c7c4fe1d49ab05 ChangeLog 2448
 MISC metadata.xml 730 RMD160 46eda6e69c53a0e301343cfc645c343c5aa9fdd6 SHA1 06e33f8fa877635c7e771e74e3edeb8cba146fb3 SHA256 fe9b9273c53a7c502d6688d63557fe603f63a47c8ff17355b9db7cdc0b78f446
 MD5 fe3ba34f23a65b9df157e14ae85b1310 metadata.xml 730
 RMD160 46eda6e69c53a0e301343cfc645c343c5aa9fdd6 metadata.xml 730
